--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./assets/icon/Logo.svg" >
+    <link rel="icon" href="./assets/icon/Logo.svg">
     <title>모야모야</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
-<body class="bg-gray-100 flex justify-center items-center min-h-screen text-center px-4">
+<body class="bg-gray-100 flex justify-center items-center min-h-screen text-center px-4 font-pretendard">
 
     <div class="container flex flex-col items-center w-full max-w-xl bg-white shadow-md rounded-lg p-6">
 
         <img src="./assets/icon/Logo.svg" alt="모야모야 아이콘" class="w-24 h-24 floating">
 
-        <div class="bg-pink-100 text-pink-600 font-bold text-lg p-3 rounded-xl mt-4">
+        <div class="bg-pink-100 text-pink-600 font-bold text-[1.125rem] p-3 rounded-xl mt-4">
             모야모야를 <br> 더 빨리 써보고 싶다면~
         </div>
 
@@ -25,11 +25,12 @@
             <img src="./assets/image/fastWait.svg" alt="빨리 기다리기" class="rounded-md w-full">
         </div>
 
-        <button class="mt-6 px-6 py-3 bg-pink-500 text-white rounded-full text-lg font-semibold shadow-lg hover:bg-pink-600 transition duration-300 transform hover:scale-105 w-full max-w-sm">
+        <button
+            class="mt-6 px-6 py-3 bg-pink-500 text-white rounded-full text-[1.125rem] font-semibold shadow-lg hover:bg-pink-600 transition duration-300 transform hover:scale-105 w-full max-w-sm">
             빨리 기다리기!
         </button>
 
-        <h2 class="mt-8 text-lg font-bold text-gray-800">제일 빨리 기다리고 있는 학교는?</h2>
+        <h2 class="mt-8 text-[1.25rem] font-bold text-gray-800">제일 빨리 기다리고 있는 학교는?</h2>
 
         <div id="school-list" class="mt-4 space-y-3 w-full max-w-md opacity-0 transition-opacity duration-500"></div>
 
