--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 
         <button
             class="mt-6 px-6 py-3 bg-pink-500 text-white rounded-full text-[1.125rem] font-semibold shadow-lg hover:bg-pink-600 transition duration-300 transform hover:scale-105 w-full max-w-sm">
-            빨리 기다리기!
+            <a href="./search.html">
+                빨리 기다리기!
+            </a>
         </button>
 
         <h2 class="mt-8 text-[1.25rem] font-bold text-gray-800">제일 빨리 기다리고 있는 학교는?</h2>
