--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 
-<body class="bg-gray-100 flex justify-center items-center min-h-screen text-center px-4 font-pretendard">
-    <div class="container flex flex-col items-center w-full max-w-xl bg-white shadow-md rounded-lg p-6">
-        <img src="./assets/icon/Logo.svg" alt="모야모야 아이콘" class="w-24 h-24 floating">
-        <div class="bg-pink-100 text-pink-600 font-bold text-[1.125rem] p-3 rounded-xl mt-4">
+<body class="bg-gray-100 flex justify-center items-center min-h-screen text-center px-4 font-pretendard select-none">
+    <div class="container flex flex-col items-center w-full max-w-xl bg-white shadow-md rounded-lg lg:rounded-none p-6">
+        <img src="./assets/icon/Logo.svg" alt="모야모야 아이콘" class="w-35 h-35 floating">
+        <div class="bg-pink-100 text-pink-500 font-bold text-[1.125rem] p-3 rounded-[20px] mt-4 relative">
             모야모야를 <br> 더 빨리 써보고 싶다면~
+            <div class="absolute w-0 h-0 -top-3 right-4 rounded-[5px]
+                border-l-0
+                border-r-[40px] border-r-transparent
+                border-b-[45px] border-b-pink-100"></div>
         </div>
         <div class="mt-6 w-full">
             <img src="./assets/image/fastWait.svg" alt="빨리 기다리기" class="rounded-md w-full">
