--- a/search.html
+++ b/search.html
@@ -11,28 +11,31 @@
     <link rel="stylesheet" href="./style.css">
     <script src="./api/server.js"></script>
     <script src="./js/search.js"></script>
-
 </head>
 
-<body class="bg-white min-h-screen text-gray-900 font-pretendard px-4">
-    <div class="max-w-md mx-auto h-screen flex flex-col">
-        
-        <div class="flex items-center space-x-3 py-4">
-            <button id="back-to-home" class="text-lg">←</button>
-            <h1 class="text-xl font-bold">학교 선택 🏫</h1>
+<body class="text-gray-900 font-pretendard min-h-screen">
+    <div class="min-h-screen bg-white lg:bg-[#f9f9f9] px-4 lg:px-0">
+        <div class="min-h-screen max-w-md mx-auto bg-white lg:p-8 lg:shadow-md flex flex-col">
+            
+            <div class="flex items-center space-x-3 py-4">
+                <button id="back-to-home" class="text-lg hover:text-gray-600 transition-colors">
+                    <a href="./index.html">←</a>
+                </button>
+                <h1 class="text-xl font-bold">학교 선택 🏫</h1>
+            </div>
+
+            <div class="relative flex items-center">
+                <img src="./assets/icon/search.svg" alt="검색" class="absolute left-3 w-5 h-5">
+                <input type="text" id="search-input" 
+                    placeholder="학교명을 입력하세요"
+                    class="w-full px-10 py-3 border border-gray-300 rounded-lg bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-400 transition-all">
+            </div>
+
+            <p class="text-red-500 text-sm mt-2">2025년 기준 재학 중인 학교 이름을 입력해 주세요</p>
+
+            <h2 id="search-title" class="mt-6 text-lg font-semibold">검색 결과</h2>
+            <div id="search-results" class="mt-4 space-y-3 flex-grow overflow-auto"></div>
         </div>
-
-        <div class="relative flex items-center">
-            <img src="./assets/icon/search.svg" alt="검색" class="absolute left-3 w-5 h-5">
-            <input type="text" id="search-input" placeholder="학교명을 입력하세요"
-                   class="w-full px-10 py-3 border border-gray-300 rounded-lg bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-400">
-        </div>
-
-        <p class="text-red-500 text-sm mt-2">2025년 기준 재학 중인 학교 이름을 입력해 주세요</p>
-
-        <h2 id="search-title" class="mt-6 text-lg font-semibold">검색 결과</h2>
-        <div id="search-results" class="mt-4 space-y-3 flex-grow overflow-auto"></div>
-
     </div>
 </body>
 
